# micromouse

./: .gitignore  CMakeLists.txt  README.md  ReadMe.txt  maze.cpp  micromouse.cpp  micromouse.h  micromouse.vcxproj  micromouse.vcxproj.filters  motor.cpp  motor.hpp  revisedMaze.cpp  stdafx.cpp  testController  testController.h
Debug/: micromouse.obj.enc  micromouse.pch  vc140.idb
Release/: micromouse.pch
ir/: ir.cpp  ir.h
main/: IO.cpp  IO.h  Micromouse_test.uvguix.SouICry  Micromouse_test.uvoptx  Micromouse_test.uvproj.saved_uv4  Micromouse_test.uvprojx  buzzer.cpp  buzzer.h  drive_control.cpp  drive_control.h  encoder.cpp  encoder.h  gyro.cpp  gyro.h  init_maze.cpp  init_maze.h  io.h  ir.cpp  ir.h  main.cpp  maze.cpp  maze.h  motor.cpp  motor.h  mouse_control.h  pin_assignments.cpp  pin_assignments.h  pin_assignments1.cpp
maze/: maze  maze.cpp  maze.h  maze_generator.cpp  maze_generator.h
mbed-src/: .hg_archival.txt
motor/: encoder.cpp  encoder.h  encoderdriver.cpp  encoderdriver.h  motor.cpp  motor.h  motordriver.h
motor-encoder-other/: IO.cpp  IO.h  Micromouse_test.uvgui.SouICry  Micromouse_test.uvguix.SouICry  Micromouse_test.uvopt  Micromouse_test.uvoptx  Micromouse_test.uvproj  Micromouse_test.uvproj.saved_uv4  Micromouse_test.uvprojx  drive_control.cpp  drive_control.h  encoder.cpp  encoder.h  gyro.cpp  gyro.h  ir.cpp  ir.h  main.cpp  motor.cpp  motor.h  pin_assignments.cpp  pin_assignments.h
regression/: 5mmApartTest.m  WLH_0425.mat  coeff.txt  measurements.mat  measurements_0305.mat  regression.py  regression_old.py
testing-only/: a.out  maze.h  (+3 more)
(+50 files in other folders)
